sort.basic.bubble.AlgBubbleSort2.scala.error
Erreur de compilation :
AlgBubbleSort2:9: error: value -+ is not a member of Int
      for (j<- 0 to i-+1){
                     ^